@@ -85,7 +85,9 @@
  ****************************************************************************/
 
 void NXGL_FUNCNAME(nxgl_fillrectangle,NXGLIB_SUFFIX)
-(FAR struct lcd_planeinfo_s *pinfo, FAR const struct nxgl_rect_s *rect, nxgl_mxpixel_t color)
+  (FAR struct lcd_planeinfo_s *pinfo,
+   FAR const struct nxgl_rect_s *rect,
+   NXGL_PIXEL_T color)
 {
   unsigned int ncols;
   unsigned int row;
